Better styles for nested form.

--- a/app/views/fields/nested_has_many/_fields.html.erb
+++ b/app/views/fields/nested_has_many/_fields.html.erb
@@ -7,5 +7,5 @@
   <% end -%>
 
   <%# TODO I18n %>
-  <%= link_to_remove_association "Remove #{field.associated_class_name.titleize}", f %>
+  <%= link_to_remove_association "Remove #{field.associated_class_name.titleize}", f, style: "margin-left: 8%;" %>
 </div>
